# api/swagger/responses.js
@@ -1,0 +1,17 @@
+export const responses = {
+  200: {
+    description: "Success response",
+  },
+  400: {
+    description: "Bad request.",
+  },
+  401: {
+    description: "Authorization information is missing or invalid",
+  },
+  404: {
+    description: "Bad request.",
+  },
+  "5xx": {
+    description: "Unexpected error.",
+  },
+};
